Correction du CSS du overflow des enfants de privateMessages du background-color

--- a/public/css/inboxStyle.css
+++ b/public/css/inboxStyle.css
@@ -19,6 +19,7 @@ body, html {
     width: 25%;
     border: 2px solid #0d9b8a;
     border-radius: 15px 0 0 15px;
+    overflow: hidden;
 }
 
 #mainBox {
